--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "build": "npm-run-all --parallel build:rollup build:styles",
     "build:rollup": "rollup -c ./.rollup.config.js",
     "build:styles": "gulp",
-    "prepublishOnly ": "npm run lint && npm run build"
+    "prepublishOnly ": "npm run lint && npm run build",
+    "watch": "npm-run-all --parallel watch:rollup watch:styles",
+    "watch:rollup": "rollup -c ./.rollup.config.js --watch",
+    "watch:styles": "gulp watch"
   },
   "engines": {
     "node": ">=16"
