--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@gebruederheitz/wp-editor-components": "^1.0.5",
     "@gebruederheitz/wp-frontend-utils": "^1.0.0",
     "@glidejs/glide": "^3.4.1",
+    "@splidejs/splide": "^2.4.21",
     "classnames": "^2.3.1",
     "core-js": "^3.15.2",
     "lodash-es": "^4.17.21"
