--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "npm-run-all --parallel build:rollup build:styles",
     "build:rollup": "rollup -c ./.rollup.config.js",
     "build:styles": "gulp",
-    "prepublishOnly ": "npm run lint && npm run build",
+    "release": "release-it --only-version",
     "watch": "npm-run-all --parallel watch:rollup watch:styles",
     "watch:rollup": "rollup -c ./.rollup.config.js --watch",
     "watch:styles": "gulp watch"
@@ -59,13 +59,13 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
-    "esm": "^3.2.25",
     "gulp": "^4.0.2",
     "gulp-dart-sass": "^1.0.2",
     "gulp-postcss": "^9.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
+    "release-it": "^15.10.1",
     "rollup": "^2.53.1",
     "sass": "^1.25.0",
     "stylelint": "^13.13.1",
