--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "@splidejs/splide": "^2.4.21",
     "classnames": "^2.3.1",
     "core-js": "^3.15.2",
-    "lodash-es": "^4.17.21"
+    "lodash-es": "^4.17.21",
+    "mitt": "^3.0.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.14.5",
