--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
     },
     "settings": {
         "react": {
-            "version": "latest"
+            "version": "17"
         }
     },
     "parserOptions": {
