--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "classnames": "^2.3.1",
     "core-js": "^3.15.2",
     "lodash-es": "^4.17.21",
-    "mitt": "^3.0.0"
+    "mitt": "^3.0.0",
+    "swiper": "^11.1.3"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.14.5",
